--- a/survey/templates/survey/survey.html
+++ b/survey/templates/survey/survey.html
@@ -37,12 +37,12 @@
 			<div class="panel-group" id="accordion">
 				<div class="panel panel-default">
 				    <div class="panel-heading">
-				        <h3 class="panel-title"> <a
+				        <h3 class="panel-title"> <!--a
 				        data-toggle="collapse show"
 				        data-parent="#accordion"
-				        href="#collapse{{category.slugify}}">
+				        href="#collapse{{category.slugify}}"-->
 				            {% trans "Answer this part" %}
-			            </a></h3>
+			            <!--/a--></h3>
 				    </div>
                     <div class="category-container">
 				        <div id="collapse{{category.slugify}}" class="panel-collapse collapse show {% if not survey.editable_answers and response_form.response is not None %}in{% endif %}
@@ -50,7 +50,8 @@
 				            <div class="panel-body">
 	                           {% include "survey/question.html" %}
                             </div>
-		                </div>
+						</div>
+					</div>
                 </div>
             </div>
         {% empty %}
