--- a/survey/templates/survey/forms/image_select.html
+++ b/survey/templates/survey/forms/image_select.html
@@ -1,4 +1,4 @@
-<input id="id_{{ widget.name }}" name="{{ widget.name }}" type="hidde" {% if widget.value %}value="{{ widget.value }}"{% else %} value="" {% endif %}/>
+<input id="id_{{ widget.name }}" name="{{ widget.name }}" type="hidden" {% if widget.value %}value="{{ widget.value }}"{% else %} value="" {% endif %}/>
 {% for choice in widget.choices %}
      <p>
      <label onclick="setResponse('id_{{ widget.name }}', '{{ choice.value }}');">
